--- a/public/css/whack.css
+++ b/public/css/whack.css
@@ -1,3 +1,10 @@
+h1{
+	text-align: center;
+	font-size: 2em;
+	position: relative;
+	left: 350;
+	font-family: ('comic-sans')
+}
 .container{
 	width: 350px;
 	height: 350px;
@@ -16,8 +23,11 @@
 .active{
 	background-image: url(/img/mole.jpg);
 }
-button{
+.difficulty{
 	font-size: 20px;
+	position: relative;
+	left: 125px;
+	top: 200px;
 }
 #back{
 	position: relative;
@@ -25,11 +35,11 @@ button{
 }
 #score{
 	position: relative;
-	left: 200px;
+	left: 275px;
 	font-size: 25px;
 }
 #c{
-	font-size: 10px;
+	font-size: 15px;
 	position: relative;
-	top: 200px;
+	top: 170px;
 }
